--- a/classmate/package.json
+++ b/classmate/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.4",
+    "bootstrap": "^5.2.3",
     "mic-recorder-to-mp3": "^2.2.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-scripts": "5.0.1",
